# bt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  cli-plan.md  mise.toml
.cargo/: config.toml.example
.github/workflows/: pre-commit.yml  release-canary.yml  release.yml  smoke-install-minimal.yml  tag-on-version-bump.yml  tests.yml
src/: args.rs  http.rs  login.rs  main.rs  self_update.rs  sql.rs
src/projects/: api.rs  create.rs  delete.rs  list.rs  mod.rs  switch.rs  view.rs
src/ui/: mod.rs  select.rs  shell.rs  spinner.rs  status.rs
tests/: eval_fixtures.rs
