[package]
name = "bt"
version = "0.1.1"
edition = "2021"
rust-version = "1.86.0"
authors = ["Braintrust engineering <eng@braintrust.dev>"]
description = "The Braintrust command line interface"
license = "Apache-2.0"
repository = "https://github.com/braintrustdata/bt"

[dependencies]
anyhow = "1.0.89"
braintrust-sdk-rust = { git = "https://github.com/braintrustdata/braintrust-sdk-rust", rev = "33ee4c8b8c1e4cd11961f7572100298caa3a39d0" }
clap = { version = "4.5.20", features = ["derive", "env"] }
crossterm = "0.28.1"
indicatif = "0.17.8"
ratatui = "0.29.0"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "process", "net"] }
unicode-width = "0.1.13"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dotenvy = "0.15"
open = "5"
urlencoding = "2"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["."]

[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = "github"
create-release = true
pr-run-mode = "plan"
allow-dirty = ["ci"]

[package.metadata.dist]
installers = ["shell", "powershell"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
unix-archive = ".tar.gz"
windows-archive = ".zip"
install-path = "CARGO_HOME"
install-updater = true
